# advent_of_fpga_2025

./: README.md
day_12/Hardcaml/: hardcaml_template_project.opam
day_12/Hardcaml/src/: day_12_solver.ml
day_12/Hardcaml/test/: dune  test_day_12_solver.ml
day_12/system_verilog/: day_12.sv  day_12_tb.sv  sim.do
day_3/system_verilog/: axi_stream_if.sv  day_3.sv  day_3_tb.sv  sim.do
